# DarkHistory

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  DHoneline.py  H2.py  H2_cooling_scans.py  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  changelog.md  config.py  darkhistory.physics.html  darkhistory.spec.html  darkhistory.spec.spectrum.html  darkhistory.utilities.html  data.py  elec_cooling.ipynb  evolve_test.ipynb  example.ipynb  genindex.html  get_engloss_table.ipynb  get_ics_table.ipynb  get_nonrel_ics_table.ipynb  get_rel_ics_table.ipynb  get_transfer_func_table.ipynb  get_transfer_func_table_2.ipynb  ics.ipynb  ics_analysis.ipynb  ics_analytic.ipynb  ics_full_2.ipynb  main.py  main_CLASS.py  main_backup.py  main_dm_baryon_scattering.py  modules.html  note.txt  objects.inv  plotting_utils.py  (+9 more)
.doctrees/: darkhistory.physics.doctree  darkhistory.utilities.doctree  environment.pickle  index.doctree  modules.doctree
.ipynb_checkpoints/: elec_cooling-checkpoint.ipynb  electron_ionization-checkpoint.ipynb  evolve_test-checkpoint.ipynb  example-checkpoint.ipynb  get_engloss_table-checkpoint.ipynb  get_ics_table-checkpoint.ipynb  get_nonrel_ics_table-checkpoint.ipynb  get_rel_ics_table-checkpoint.ipynb  get_transfer_func_table-checkpoint.ipynb  get_transfer_func_table_2-checkpoint.ipynb  ics-checkpoint.ipynb  ics_analysis-checkpoint.ipynb  ics_analytic-checkpoint.ipynb  ics_full_2-checkpoint.ipynb  transfer_function-checkpoint.ipynb
H2_cooling/: H2.py  H2_constraints.ipynb  H2_cooling_and_halos.ipynb  H2_decay_scans.py  H2_pwave_scans.py  H2_swave_scans.py  paper_figs.ipynb
_autosummary/: darkhistory.electrons.html  darkhistory.physics.html  darkhistory.spec.html  darkhistory.utilities.html  modules.html
_sources/: darkhistory.spec.rst.txt  modules.rst.txt
darkhistory/: __init__.py  config.py  main.py  physics.py  pppc.py  tla.py  utilities.py
docs/: conf.py  darkhistory.spec.spectools.rst  darkhistory.spec.spectrum.rst  index.html  modules.rst  requirements.txt  spectools.rst  spectrum.rst
example_notebooks/: Schramm.ipynb
examples/: 21cm_Sensitivity.ipynb  CMBloss_check.ipynb  Checking_New_ICS_Engloss_Spectra.ipynb  Checking_New_ICS_Spectra.ipynb  Cross_Checks.ipynb  Decay_to_b_bbar.ipynb  Example10_Full_Calculation_with_Back_Reaction.ipynb  Example10_Full_Calculation_with_Back_Reaction_OLD.ipynb  Example10b_Full_Calculation_with_Back_Reaction_Coarse.ipynb  Example13_OLD.ipynb  (+84 more)
(+1503 files in other folders)
