[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkhistory"
version = "1.1.3.20250519"
readme = "README.md"
description = "Base DarkHistory. Testing soft photon evolution. Compatible with in DM21cm. NN transfer functions available."
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.3",
    "h5py",
    "matplotlib",
    "numpy>=1.25.2",
    "scipy>=1.11.2",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/hongwanliu/DarkHistory"

[tool.setuptools.packages.find]
include = [
    "darkhistory",
    "examples",
    "README.md",
    "LICENSE"
]
exclude = [
    "tests",
    "dist",
    "docs",
    "sphinx",
    "*.egg-info",
    "build",
    "*.pyc",
    "*.pyo",
    "__pycache__"
]