[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkhistory"
version = "1.1.2.20250616"
readme = "README.md"
description = "Base DarkHistory. Used in DM21cm. NN transfer functions available."
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.3",
    "h5py",
    "matplotlib",
    "numpy>=1.25.2",
    "pytest",
    "scipy>=1.11.2",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/hongwanliu/DarkHistory"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["darkhistory", "darkhistory.*"]

[tool.setuptools.package-data]
"darkhistory" = ["*.csv", "*.dat", "*.txt", "**/*.csv", "**/*.dat", "**/*.txt"]